# SnakeZ

./: Cargo.toml  LICENSE  README.md
game_backend/: Cargo.toml
game_backend/src/: base.rs  events.rs  game.rs  grid.rs  lib.rs  player.rs  snake.rs
game_cmd_front/: Cargo.toml
game_cmd_front/src/: front.rs
snakez_cmd_client/: Cargo.toml
snakez_cmd_client/src/: main.rs
