[package]
name = "game_cmd_front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_engine = { version = "2.5", features = ["event"] }
lazy_static = "1.4"
game_backend = { path = "../game_backend" }